Doc style fixes (color of superclass text and sidebar overflow).

--- a/doc/_static/flushRight.css
+++ b/doc/_static/flushRight.css
@@ -4,4 +4,13 @@ div.body p.flushRight {
 	padding-left: 1em;
 	font-size: 0.66em;
 	font-style: oblique;
+	color: gray;
+}
+
+.flushRight a {
+	color: #688faf;
+}
+
+.sphinxsidebar {
+	overflow: hidden;
 }
